--- a/README
+++ b/README
@@ -20,9 +20,8 @@ These files will be created and updated by crystal_htop:
 - htop_session_list.txt
 - htop_uptime_.txt
 
-## Build instructions
-
-Simply follow the build instructions for htop. A successful build will result in a crystal_htop binary executable on your platform. 
+When it comes to building this project, simply follow the build instructions for 
+htop below. A successful build will result in a crystal_htop binary.
 
 ---
 # [![htop logo](htop.png)](https://htop.dev)
